--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-vector-icons/common": "^11.0.0",
     "@react-native-vector-icons/fontawesome6": "^6.7.1",
     "react": "19.0.0",
-    "react-native": "0.78.1"
+    "react-native": "0.78.1",
+    "react-native-nfc-manager": "^3.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
