--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-native-vector-icons/fontawesome6": "^6.7.1",
     "react": "19.0.0",
     "react-native": "0.78.1",
-    "react-native-nfc-manager": "^3.16.1"
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-nfc-manager": "^3.16.1",
+    "react-native-permissions": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
