Updated User Information Page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-vector-icons/common": "^11.0.0",
     "@react-native-vector-icons/fontawesome6": "^6.7.1",
+    "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.1",
     "react-native-linear-gradient": "^2.8.3",
